syntax = "proto3";

package hotel;

service HotelService {
  rpc GetAllHotels(Empty) returns (HotelList) {}
  rpc GetHotelById(HotelIdRequest) returns (HotelRpc) {}
}

message Empty {}

message HotelIdRequest {
  int32 id = 1;
}

message HotelRpc {
  int32 id = 1;
  string name = 2;
  int32 rating = 3;
  string address = 4;
}

message HotelList {
  repeated HotelRpc hotels = 1;
}

